<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profitability">


    <ScrollView
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:scrollbarStyle="insideOverlay"
        android:layout_marginLeft="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title"
                android:layout_marginTop="8dp"
                android:text="@string/menu_profitability"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/activity_information"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/select_calculator"
                android:textColor="#000000"
                android:textSize="@dimen/body"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@+id/activity_label" />

            <ImageView
                android:id="@+id/net_margin"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/label_net_margin"
                android:gravity="center"
                android:onClick="net_margin"
                ads:layout_constraintEnd_toStartOf="@id/gross_margin"
                ads:layout_constraintStart_toStartOf="@id/activity_information"
                ads:layout_constraintTop_toBottomOf="@id/activity_information"
                app:srcCompat="@mipmap/ic_net_margin"
                />

            <ImageView
                android:id="@+id/gross_margin"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/label_gross_margin"
                android:gravity="center"
                android:onClick="gross_margin"
                ads:layout_constraintEnd_toEndOf="@id/activity_information"
                ads:layout_constraintStart_toEndOf="@id/net_margin"
                ads:layout_constraintTop_toBottomOf="@id/activity_information"
                app:srcCompat="@mipmap/ic_gross_margin" />

            <TextView
                android:id="@+id/label_net_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:onClick="net_margin"
                android:text="@string/label_net_margin"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/quote"
                ads:layout_constraintEnd_toEndOf="@+id/net_margin"
                ads:layout_constraintStart_toStartOf="@id/net_margin"
                ads:layout_constraintTop_toBottomOf="@id/net_margin" />

            <TextView
                android:id="@+id/label_gross_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:onClick="gross_margin"
                android:text="@string/label_gross_margin"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/quote"
                ads:layout_constraintEnd_toEndOf="@+id/gross_margin"
                ads:layout_constraintStart_toStartOf="@id/gross_margin"
                ads:layout_constraintTop_toBottomOf="@id/gross_margin" />

            <ImageView
                android:id="@+id/return_ratio"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/equity_ratio"
                android:onClick="return_ratio"
                ads:layout_constraintEnd_toStartOf="@id/capital_ratio"
                ads:layout_constraintStart_toStartOf="@id/activity_information"
                ads:layout_constraintTop_toBottomOf="@id/label_net_margin"
                app:srcCompat="@mipmap/ic_equity_ratio" />

            <ImageView
                android:id="@+id/capital_ratio"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/capital_ratio"
                android:gravity="center"
                android:onClick="capital_ratio"
                ads:layout_constraintEnd_toEndOf="@id/activity_information"
                ads:layout_constraintStart_toEndOf="@id/return_ratio"
                ads:layout_constraintTop_toBottomOf="@id/label_gross_margin"
                app:srcCompat="@mipmap/ic_capital_ratio" />

            <TextView
                android:id="@+id/label_return_ratio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:onClick="return_ratio"
                android:text="@string/label_return_ratio"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/quote"
                ads:layout_constraintEnd_toEndOf="@+id/return_ratio"
                ads:layout_constraintStart_toStartOf="@id/return_ratio"
                ads:layout_constraintTop_toBottomOf="@id/return_ratio" />

            <TextView
                android:id="@+id/label_capital_ratio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:onClick="capital_ratio"
                android:text="@string/label_capital_ratio"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/quote"
                ads:layout_constraintEnd_toEndOf="@+id/capital_ratio"
                ads:layout_constraintStart_toStartOf="@id/capital_ratio"
                ads:layout_constraintTop_toBottomOf="@id/capital_ratio" />

            <ImageView
                android:id="@+id/assets_ratio"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/assets_ratio"
                android:gravity="center"
                android:onClick="assets_ratio"
                ads:layout_constraintEnd_toStartOf="@id/investment_ratio"
                ads:layout_constraintStart_toStartOf="@id/activity_information"
                ads:layout_constraintTop_toBottomOf="@id/label_return_ratio"
                app:srcCompat="@mipmap/ic_assets_ratio" />

            <ImageView
                android:id="@+id/investment_ratio"
                android:layout_width="0dp"
                android:layout_height="@dimen/icon"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/investment_ratio"
                android:gravity="center"
                android:onClick="investment_ratio"
                ads:layout_constraintEnd_toEndOf="@id/activity_information"
                ads:layout_constraintStart_toEndOf="@id/assets_ratio"
                ads:layout_constraintTop_toBottomOf="@id/label_capital_ratio"
                app:srcCompat="@mipmap/ic_investment_ratio" />

            <TextView
                android:id="@+id/label_assets_ratio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:onClick="assets_ratio"
                android:text="@string/label_assets_ratio"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/quote"
                ads:layout_constraintEnd_toEndOf="@+id/assets_ratio"
                ads:layout_constraintStart_toStartOf="@id/assets_ratio"
                ads:layout_constraintTop_toBottomOf="@id/assets_ratio" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:onClick="investment_ratio"
                android:text="@string/label_investment_ratio"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/quote"
                ads:layout_constraintEnd_toEndOf="@+id/investment_ratio"
                ads:layout_constraintStart_toStartOf="@id/investment_ratio"
                ads:layout_constraintTop_toBottomOf="@id/investment_ratio" />

            <TextView
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                ads:layout_constraintEnd_toEndOf="@id/guideline_end"
                ads:layout_constraintStart_toStartOf="@id/guideline_start"
                ads:layout_constraintTop_toBottomOf="@id/label_assets_ratio"  />


            <TextView
                android:id="@+id/profitability_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@android:color/white"
                android:gravity="start|top"
                android:text="@string/menu_profitability"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/body"
                android:textStyle="bold"
                ads:layout_constraintEnd_toEndOf="@id/guideline_end"
                ads:layout_constraintStart_toStartOf="@id/guideline_start"
                ads:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/profitability_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="#e7e7e7"
                android:gravity="start|top"
                android:text="@string/info_profitability"
                android:textColor="@android:color/black"
                android:textSize="@dimen/quote"
                ads:layout_constraintEnd_toEndOf="@id/guideline_end"
                ads:layout_constraintStart_toStartOf="@id/guideline_start"
                ads:layout_constraintTop_toBottomOf="@id/profitability_heading" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/darker_gray"
                android:gravity="center"
                ads:layout_constraintEnd_toEndOf="@id/guideline_end"
                ads:layout_constraintStart_toStartOf="@id/guideline_start"
                ads:layout_constraintTop_toBottomOf="@id/profitability_description" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                ads:layout_constraintGuide_begin="20dp"
                ads:layout_constraintGuide_percent=".10" />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                ads:layout_constraintGuide_begin="20dp"
                ads:layout_constraintGuide_percent=".90" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>